Fixed inline list align-items

--- a/src/scss/libraries/mixins/_utilities.scss
+++ b/src/scss/libraries/mixins/_utilities.scss
@@ -17,6 +17,7 @@
 /// @group layout
 @mixin inlineList {
 	display: inline-flex;
+	align-items: center;
 	padding: 0;
 	list-style: none;
 }
